yaml_files/index-web-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: index-web-ssl-tls-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - frontend.52.142.236.126.nip.io # update IP address here
      secretName: app-web-cert
  rules:
  - host: frontend.52.142.236.126.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: index-web-service
            port:
              number: 80
